@@ -70,7 +70,7 @@ extern int mingw_app_type;
 
 HINSTANCE __mingw_winmain_hInstance;
 _TCHAR *__mingw_winmain_lpCmdLine;
-DWORD __mingw_winmain_nShowCmd;
+DWORD __mingw_winmain_nShowCmd = SW_SHOWDEFAULT;
 
 static int argc;
 extern void __main(void);
@@ -269,13 +269,16 @@ __tmainCRTStartup (void)
     
     _fpreset ();
 
-    if (mingw_app_type)
-      {
+    __mingw_winmain_hInstance = (HINSTANCE) &__ImageBase;
+
 #ifdef WPRFLAG
 	lpszCommandLine = (_TCHAR *) _wcmdln;
 #else
 	lpszCommandLine = (char *) _acmdln;
 #endif
+
+    if (lpszCommandLine)
+      {
 	while (*lpszCommandLine > SPACECHAR || (*lpszCommandLine && inDoubleQuote))
 	  {
 	    if (*lpszCommandLine == DQUOTECHAR)
@@ -283,8 +286,8 @@ __tmainCRTStartup (void)
 #ifdef _MBCS
 	    if (_ismbblead (*lpszCommandLine))
 	      {
-		if (lpszCommandLine) /* FIXME: Why this check? Should I check for *lpszCommandLine != 0 too? */
-		  lpszCommandLine++;
+		if (lpszCommandLine[1])
+		  ++lpszCommandLine;
 	      }
 #endif
 	    ++lpszCommandLine;
@@ -292,8 +295,10 @@ __tmainCRTStartup (void)
 	while (*lpszCommandLine && (*lpszCommandLine <= SPACECHAR))
 	  lpszCommandLine++;
 
-	__mingw_winmain_hInstance = (HINSTANCE) &__ImageBase;
 	__mingw_winmain_lpCmdLine = lpszCommandLine;
+
+    if (mingw_app_type)
+      {
 	__mingw_winmain_nShowCmd = StartupInfo.dwFlags & STARTF_USESHOWWINDOW ?
 				    StartupInfo.wShowWindow : SW_SHOWDEFAULT;
       }
